Per https://stackoverflow.com/questions/20102721/create-a-version-number-for-ac-init use m4_esyscmd_s instead of m4_esyscmd.
Signed-off-by: David Klann <dklann@broadcasttool.com>

--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@ dnl
 
 AC_PREREQ([2.69])
 
-AC_INIT([rdfetch],m4_esyscmd(cat PACKAGE_VERSION))
+AC_INIT([rdfetch],m4_esyscmd_s(cat PACKAGE_VERSION))
 AM_INIT_AUTOMAKE
 
 AC_SUBST(RPM_RELEASE,1)
