Properly declare count as an integer that is right-justified and filled with 2 spaces.
Signed-off-by: David Klann <dklann@broadcasttool.com>

--- a/rdfetch.in
+++ b/rdfetch.in
@@ -1436,7 +1436,7 @@ done
 ##########################################################################################
 
 typeset -a menu command windowTitle
-typeset -iR 2 count
+typeset -i -R 2 count
 typeset choice
 
 while : ; do
