Take 4 at including sendusr1.
Signed-off-by: David Klann <dklann@broadcasttool.com>

--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,11 @@ else
   AC_SUBST(LOCAL_PREFIX,${prefix})
 fi
 
+#
+# Basic Compiler Checks
+#
+AC_PROG_CC
+
 # Rdfetch specifics, we prefer /home/rd/rdfetch/configuration
 # for all the rdfetch configuration and notification
 # stuff.
