--- a/rdfetch.in
+++ b/rdfetch.in
@@ -36,7 +36,7 @@ colors
 # This script complies with Semantic Versioning: http://semver.org/
 vMajor=
 vMinor=4
-vPatch=5
+vPatch=6
 vHash='$Hash$'
 
 # Get zsh functions necessary for this script.
@@ -1109,7 +1109,7 @@ function showRDDropboxes() {
   local -r myName=${1} ; shift
   local -r verbose=${1}
 
-  local query="select d.ID,d.STATION_NAME,d.PATH,d.GROUP_NAME,d.TO_CART,d.DELETE_CUTS,c.TITLE,u.ORIGIN_DATETIME from DROPBOXES d join CART c on d.TO_CART = c.NUMBER join CUTS u on c.NUMBER = u.CART_NUMBER where d.PATH like '${DIR_LIBRARY}/%' order by d.PATH"
+  local query="select d.ID,d.STATION_NAME,d.PATH,d.GROUP_NAME,d.TO_CART,d.DELETE_CUTS,c.TITLE,u.ORIGIN_DATETIME from DROPBOXES d join CART c on d.TO_CART = c.NUMBER left join CUTS u on c.NUMBER = u.CART_NUMBER where d.STATION_NAME = '$(hostname -s)' and d.PATH like '${DIR_LIBRARY}/%' order by d.PATH"
   local id stationName boxpath group cart dropcuts title origin_datetime
 
   if ! okDatabaseStructure DROPBOXES:id+station_name+path+group_name+to_cart+delete_cuts,CART:number+title,CUTS:cart_number+origin_datetime "${verbose}" ; then
