--- a/zsh-functions.in
+++ b/zsh-functions.in
@@ -30,8 +30,8 @@ zmodload zsh/datetime
   vLibRelease=0
   vLibMajor=0
   vLibMinor=2
-  vLibPatch=17
-  vLibHash='$Hash$'
+  vLibPatch=18
+  vLibHash='$Hash: 556d950$'
 }
 function zsh_library_version() {
   printf "%d.%d.%d.%d\n" \
@@ -1071,6 +1071,27 @@ function okDatabaseStructure() {
 
   IFS="${oIFS}"
   return
+}
+
+# getYesNo() issues the given prompt on /dev/tty until the response
+# resembles an affirmative or a negative response.
+# Returns 0 ("success") for a "yes"-like response and 1
+# ("non-success") for a "no"-like response to the given prompt.
+function getYesNo() {
+  local -r our_prompt="${1}"
+
+  local -i again=0
+  local response=''
+  until [[ "${(L)response}" =~ ^(no*|y(es)*)$ ]] ; do
+    ((again)) && print "Please respond with 'yes' (or 'y') or 'no' (or 'n')." > /dev/tty
+    print "${our_prompt} [y or n] \c" > /dev/tty
+    # response is actually used, but in a non-Bash way, see below.
+    # shellcheck disable=SC2034
+    read response < /dev/tty
+    ((again=1))
+  done
+  [[ "${(L)response}" =~ ^n ]] && return 1
+  return 0
 }
 
 # Convert milliseconds to [HH:]MM:SS.
