--- a/rdfetch.in
+++ b/rdfetch.in
@@ -38,7 +38,7 @@ colors
 vMajor=0
 vMinor=4
 vPatch=13
-vHash='$Hash: 556d950$'
+vHash='$Hash$'
 
 # Get zsh functions necessary for this script.
 # SC1091: breaks before running configure.
